--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,7 +14,7 @@
             android:id="@+id/tvWallpaperTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Wallpaper"
+            android:text="@string/wallpaper"
             android:textColor="@color/colorAccent"
             android:textSize="16dp"
             android:layout_marginLeft="20dp"
@@ -30,7 +30,7 @@
                 android:id="@+id/tvWallpaper"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Wallpaper"
+                android:text="@string/wallpaper"
                 android:textColor="@color/colorWhite"
                 android:textSize="17dp"
                 android:layout_marginLeft="20dp"
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvWallpaper"
-                android:text="Turn on the button to set the photos as your device wallpaper"
+                android:text="@string/turn_on_the_button_to_set_the_photos_as_your_device_wallpaper"
                 android:textColor="@color/colorOffWhite"
                 android:textSize="14dp"
                 android:layout_marginLeft="20dp"
@@ -69,7 +69,7 @@
                 android:id="@+id/tvWallpaperQuality"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Wallpaper Quality"
+                android:text="@string/wallpaper_quality"
                 android:textColor="@color/colorWhite"
                 android:textSize="17dp"
                 android:layout_marginLeft="20dp"
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvWallpaperQuality"
-                android:text="Set full quality image as your device wallpaper. Recommended over high speed data connection."
+                android:text="@string/set_full_quality_image_as_your_device_wallpaper_recommended_over_high_speed_data_connection"
                 android:textColor="@color/colorOffWhite"
                 android:textSize="14dp"
                 android:layout_marginLeft="20dp"
@@ -108,7 +108,7 @@
             android:id="@+id/tvPaletteMain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Palette"
+            android:text="@string/palette"
             android:textColor="@color/colorAccent"
             android:textSize="16dp"
             android:layout_marginLeft="20dp"
@@ -123,7 +123,7 @@
                 android:id="@+id/tvPalette"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Colors"
+                android:text="@string/colors"
                 android:textColor="@color/colorWhite"
                 android:textSize="17dp"
                 android:layout_marginLeft="20dp"
@@ -134,7 +134,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvPalette"
-                android:text="Show only major colors from image."
+                android:text="@string/show_only_major_colors_from_image"
                 android:textColor="@color/colorOffWhite"
                 android:textSize="14dp"
                 android:layout_alignParentLeft="true"
