--- a/app/src/main/res/layout/add_holder_palette.xml
+++ b/app/src/main/res/layout/add_holder_palette.xml
@@ -17,7 +17,7 @@
             android:id="@+id/tvHexCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="#fghfgg"
+            android:text="@string/fghfgg"
             android:layout_centerVertical="true"
             android:layout_marginLeft="30dp"
             android:textSize="17dp"
@@ -29,7 +29,7 @@
             android:id="@+id/tvColorPopulation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20"
+            android:text="@string/_20"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
