--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -16,7 +16,7 @@
             android:id="@+id/tvDetail"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:text="Choose option to see the color palatte"
+            android:text="@string/choose_option_to_see_the_color_palatte"
             android:textColor="@color/colorWhite"
             android:textSize="21dp"
             android:fontFamily="sans-serif-smallcaps"
@@ -27,7 +27,7 @@
             android:layout_width="300dp"
             android:layout_height="35dp"
             android:background="@drawable/button"
-            android:text="Take photo"
+            android:text="@string/take_photo"
             android:textColor="@color/colorWhite"
             android:textAllCaps="false"
             android:fontFamily="serif-monospace"
@@ -41,7 +41,7 @@
             android:layout_width="300dp"
             android:layout_height="35dp"
             android:background="@drawable/button"
-            android:text="Choose from library"
+            android:text="@string/choose_from_library"
             android:textColor="@color/colorWhite"
             android:textAllCaps="false"
             android:fontFamily="serif-monospace"
