--- a/app/src/main/res/layout/activity_main_new.xml
+++ b/app/src/main/res/layout/activity_main_new.xml
@@ -70,7 +70,8 @@
                             android:layout_centerVertical="true"
                             android:layout_centerHorizontal="true"
                             android:layout_marginLeft="20dp"
-                            android:tint="@color/tabIcons"/>
+                            android:tint="@color/tabIcons"
+                            android:contentDescription="@string/tap_this_to_see_set_of_images_provided"/>
 
                     </RelativeLayout>
                 </com.balysv.materialripple.MaterialRippleLayout>
@@ -97,7 +98,8 @@
                             android:src="@drawable/ic_whatshot_white_24dp"
                             android:layout_centerVertical="true"
                             android:layout_centerHorizontal="true"
-                            android:tint="@color/tabIcons"/>
+                            android:tint="@color/tabIcons"
+                            android:contentDescription="@string/press_this_tab_for_choosing_image_on_your_own"/>
                     </RelativeLayout>
                 </com.balysv.materialripple.MaterialRippleLayout>
 
@@ -122,7 +124,8 @@
                             android:src="@drawable/ic_favourite_white_24dp"
                             android:layout_centerVertical="true"
                             android:layout_centerHorizontal="true"
-                            android:tintMode="@color/tabIcons"/>
+                            android:tintMode="@color/tabIcons"
+                            android:contentDescription="@string/tab_this_tab_to_see_the_liked_images"/>
 
                     </RelativeLayout>
                 </com.balysv.materialripple.MaterialRippleLayout>
