--- a/app/src/main/res/layout/fragment_add_detail.xml
+++ b/app/src/main/res/layout/fragment_add_detail.xml
@@ -53,7 +53,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax"/>
+                    app:layout_collapseMode="parallax"
+                    android:contentDescription="@string/this_is_the_image_chosen_by_the_user"/>
             </com.balysv.materialripple.MaterialRippleLayout>
 
             <ImageView
@@ -64,7 +65,8 @@
                 android:layout_marginLeft="12dp"
                 android:layout_marginTop="10dp"
                 android:padding="3dp"
-                app:layout_collapseMode="pin"/>
+                app:layout_collapseMode="pin"
+                android:contentDescription="@string/press_this_for_going_back"/>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
