--- a/app/src/main/res/layout/library_card_view.xml
+++ b/app/src/main/res/layout/library_card_view.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="20dp"
-                android:text="Library Name"
+                android:text="@string/library_name"
                 android:textColor="@color/detailTextDark"
                 android:fontFamily="sans-serif-smallcaps"
                 android:layout_marginLeft="20dp"
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textStyle="bold"
-                android:text="WEBSITE"
+                android:text="@string/website"
                 android:textColor="@color/detailTextDark"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
