--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                     android:src="@drawable/ic_palette_white_24dp"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:tint="@color/tabIcons"
                     android:contentDescription="@string/tap_this_for_seeing_set_of_images_provided"/>
 
@@ -64,7 +64,7 @@
             android:id="@+id/mrl2"
             android:layout_width="55dp"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/mrl1"
+            android:layout_toEndOf="@+id/mrl1"
             app:mrl_rippleOverlay="true"
             app:mrl_rippleColor="@color/colorWhite"
             app:mrl_rippleAlpha="0.1"
@@ -91,7 +91,7 @@
             android:id="@+id/mrl3"
             android:layout_width="55dp"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/mrl2"
+            android:layout_toEndOf="@+id/mrl2"
             app:mrl_rippleOverlay="true"
             app:mrl_rippleColor="@color/colorWhite"
             app:mrl_rippleAlpha="0.1"
