--- a/app/src/main/res/layout/activity_main_new.xml
+++ b/app/src/main/res/layout/activity_main_new.xml
@@ -69,9 +69,10 @@
                             android:src="@drawable/ic_palette_white_24dp"
                             android:layout_centerVertical="true"
                             android:layout_centerHorizontal="true"
-                            android:layout_marginLeft="20dp"
+                            android:layout_marginStart="20dp"
                             android:tint="@color/tabIcons"
-                            android:contentDescription="@string/tap_this_to_see_set_of_images_provided"/>
+                            android:contentDescription="@string/tap_this_to_see_set_of_images_provided"
+                            android:nextFocusForward="@+id/ivTabYourOwn"/>
 
                     </RelativeLayout>
                 </com.balysv.materialripple.MaterialRippleLayout>
@@ -80,7 +81,7 @@
                     android:id="@+id/mrl2"
                     android:layout_width="55dp"
                     android:layout_height="match_parent"
-                    android:layout_toRightOf="@+id/mrl1"
+                    android:layout_toEndOf="@+id/mrl1"
                     app:mrl_rippleOverlay="true"
                     app:mrl_rippleColor="@color/colorWhite"
                     app:mrl_rippleAlpha="0.1"
@@ -99,7 +100,8 @@
                             android:layout_centerVertical="true"
                             android:layout_centerHorizontal="true"
                             android:tint="@color/tabIcons"
-                            android:contentDescription="@string/press_this_tab_for_choosing_image_on_your_own"/>
+                            android:contentDescription="@string/press_this_tab_for_choosing_image_on_your_own"
+                            android:nextFocusForward="@+id/ivTabFavourite"/>
                     </RelativeLayout>
                 </com.balysv.materialripple.MaterialRippleLayout>
 
@@ -107,7 +109,7 @@
                     android:id="@+id/mrl3"
                     android:layout_width="55dp"
                     android:layout_height="match_parent"
-                    android:layout_toRightOf="@+id/mrl2"
+                    android:layout_toEndOf="@+id/mrl2"
                     app:mrl_rippleOverlay="true"
                     app:mrl_rippleColor="@color/colorWhite"
                     app:mrl_rippleAlpha="0.1"
@@ -162,7 +164,7 @@
                     android:id="@+id/iv_profile_image"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="20dp"
                     android:backgroundTint="#ffffff"
                     android:src="@drawable/ic_profile"
@@ -176,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_profile_image"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:text="@string/hi"
                     android:textColor="@color/colorBlack"
@@ -188,7 +190,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_profile_image"
                     android:layout_marginTop="8dp"
-                    android:layout_toRightOf="@id/tv_hi"
+                    android:layout_toEndOf="@id/tv_hi"
                     android:textColor="@color/colorBlack"
                     android:textSize="7.2pt" />
 
@@ -198,9 +200,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:layout_below="@id/tv_user_name"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="7dp"
                     android:paddingBottom="1dp"
                     android:textColor="@color/colorBlack"
@@ -219,7 +221,7 @@
             android:background="#FFFFFF"
             android:backgroundTint="@color/colorWhite"
             android:choiceMode="singleChoice"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:dividerHeight="0dp" />
     </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
