--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -17,7 +17,7 @@
             android:text="@string/wallpaper"
             android:textColor="@color/colorAccent"
             android:textSize="16dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"/>
 
         <RelativeLayout
@@ -33,7 +33,7 @@
                 android:text="@string/wallpaper"
                 android:textColor="@color/colorWhite"
                 android:textSize="17dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"/>
 
             <TextView
@@ -47,16 +47,16 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="20dp"
-                android:layout_alignParentLeft="true"
-                android:layout_toLeftOf="@+id/sWallpaper"/>
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/sWallpaper"/>
 
             <android.support.v7.widget.SwitchCompat
                 android:id="@+id/sWallpaper"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -72,7 +72,7 @@
                 android:text="@string/wallpaper_quality"
                 android:textColor="@color/colorWhite"
                 android:textSize="17dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"/>
 
             <TextView
@@ -86,16 +86,16 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="20dp"
-                android:layout_alignParentLeft="true"
-                android:layout_toLeftOf="@+id/sWallpaperQuality"/>
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/sWallpaperQuality"/>
 
             <android.support.v7.widget.SwitchCompat
                 android:id="@+id/sWallpaperQuality"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
         </RelativeLayout>
     </RelativeLayout>
 
@@ -111,7 +111,7 @@
             android:text="@string/palette"
             android:textColor="@color/colorAccent"
             android:textSize="16dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"/>
         <RelativeLayout
             android:id="@+id/rlPaletteCount"
@@ -126,7 +126,7 @@
                 android:text="@string/colors"
                 android:textColor="@color/colorWhite"
                 android:textSize="17dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"/>
 
             <TextView
@@ -137,7 +137,7 @@
                 android:text="@string/show_only_major_colors_from_image"
                 android:textColor="@color/colorOffWhite"
                 android:textSize="14dp"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginRight="20dp"/>
@@ -146,9 +146,9 @@
                 android:id="@+id/sPalette"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
         </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
