--- a/app/src/main/res/layout/fragment_add_detail.xml
+++ b/app/src/main/res/layout/fragment_add_detail.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_clear_white_24dp"
-                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="10dp"
                 android:padding="3dp"
                 app:layout_collapseMode="pin"
