--- a/app/src/main/res/layout/fragment_unsplash_detail.xml
+++ b/app/src/main/res/layout/fragment_unsplash_detail.xml
@@ -60,64 +60,69 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_arrow_back_white_24dp"
-                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="10dp"
                 android:padding="3dp"
                 app:layout_collapseMode="pin"
-                android:contentDescription="@string/press_this_for_going_back"/>
+                android:contentDescription="@string/press_this_for_going_back"
+                android:nextFocusForward="@+id/ivShare"/>
 
             <ImageView
                 android:id="@+id/ivShare"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_share_white_24dp"
-                android:layout_gravity="right"
-                android:layout_marginRight="12dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="12dp"
                 android:layout_marginTop="10dp"
                 android:padding="3dp"
                 app:layout_collapseMode="pin"
-                android:contentDescription="@string/press_this_to_share_image"/>
+                android:contentDescription="@string/press_this_to_share_image"
+                android:nextFocusForward="@+id/ivLikeBorder"/>
 
             <ImageView
                 android:id="@+id/ivLikeBorder"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
                 android:src="@drawable/ic_favourite_border_white_24dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom|end"
                 app:layout_collapseMode="pin"
-                android:contentDescription="@string/this_is_like_border"/>
+                android:contentDescription="@string/this_is_like_border"
+                android:nextFocusForward="@+id/ivLike"/>
 
             <ImageView
                 android:id="@+id/ivLike"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
                 android:src="@drawable/ic_favourite_white_24dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom|end"
                 app:layout_collapseMode="pin"
-                android:contentDescription="@string/press_this_to_like_or_unlike_the_image"/>
+                android:contentDescription="@string/press_this_to_like_or_unlike_the_image"
+                android:nextFocusForward="@+id/ivDownload"/>
 
             <ImageView
                 android:id="@+id/ivDownload"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
-                android:layout_gravity="bottom|right"
-                android:layout_marginRight="60dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="60dp"
                 android:layout_marginBottom="10dp"
                 app:layout_collapseMode="pin"
                 android:src="@drawable/ic_file_download_white_24dp"
                 android:onClick="onClick"
-                android:contentDescription="@string/press_to_download_the_image"/>
+                android:contentDescription="@string/press_to_download_the_image"
+                android:nextFocusForward="@+id/ivWallpaper"/>
 
             <ImageView
                 android:id="@+id/ivWallpaper"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
-                android:layout_gravity="bottom|right"
-                android:layout_marginRight="100dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="100dp"
                 android:layout_marginBottom="10dp"
                 app:layout_collapseMode="pin"
                 android:src="@drawable/ic_wallpaper_white_24dp"
@@ -127,8 +132,8 @@
                 android:id="@+id/pbWallpaper"
                 android:layout_width="27dp"
                 android:layout_height="27dp"
-                android:layout_gravity="bottom|right"
-                android:layout_marginRight="60dp"
+                android:layout_gravity="bottom|end"
+                android:layout_marginEnd="60dp"
                 android:layout_marginBottom="10dp"
                 app:layout_collapseMode="pin"/>
 
@@ -136,11 +141,11 @@
                 android:id="@+id/tvDownloading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
+                android:layout_gravity="bottom|end"
                 android:text="@string/downloading"
                 android:fontFamily="sans-serif-smallcaps"
                 android:textColor="@color/colorWhite"
-                android:layout_marginRight="100dp"
+                android:layout_marginEnd="100dp"
                 android:layout_marginBottom="10dp"
                 app:layout_collapseMode="pin"/>
 
