--- a/app/src/main/res/layout/holder_palette.xml
+++ b/app/src/main/res/layout/holder_palette.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/fghfgg"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
         android:textSize="17dp"
         android:fontFamily="monospace"
         android:textAllCaps="true"
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"
         android:text="@string/_20"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="30dp"
         android:textSize="17dp"
         android:fontFamily="monospace"
         android:textAllCaps="true"
