--- a/app/src/main/res/layout/holder_palette_detail.xml
+++ b/app/src/main/res/layout/holder_palette_detail.xml
@@ -21,8 +21,8 @@
             android:textSize="24dp"
             android:textColor="#FFF"
             android:fontFamily="monospace"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginStart="30dp"
             android:layout_marginBottom="5dp"/>
 
         <TextView
@@ -34,7 +34,7 @@
             android:textColor="#FFF"
             android:fontFamily="monospace"
             android:layout_below="@+id/tvImageName"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginEnd="50dp"
+            android:layout_marginStart="30dp"/>
     </RelativeLayout>
 </RelativeLayout>
