--- a/app/src/main/res/layout/library_card_view.xml
+++ b/app/src/main/res/layout/library_card_view.xml
@@ -27,7 +27,7 @@
                 android:text="@string/library_name"
                 android:textColor="@color/detailTextDark"
                 android:fontFamily="sans-serif-smallcaps"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"/>
 
             <TextView
@@ -39,9 +39,9 @@
                 android:text="@string/website"
                 android:textColor="@color/detailTextDark"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_marginBottom="10dp"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
